# ChallengeLab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
challenge_manager/: __init__.py  __main__.py  cli.py
challenges/reverse-string/: README.md  challenge.sh  run_tests.sh
challenges/reverse-string/tests/: expected.txt  input.txt
docker/: Dockerfile.base  Dockerfile.reverse-string  run_tests.sh
scripts/: install.sh
tests/: __init__.py  test_cli.py
